# tablecensus

./: README.md  examine_template.py  pyproject.toml  test_census_value.py  test_integration.py  test_wrap_census.py
tablecensus/: __init__.py  assemble.py  census_value.py  config.py  geography.py  reference.py  request_manager.py  request_prep.py  table_style.py  variables.py
tablecensus/templates/: dictionary_template.xlsx
